--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "sanitize.css": "^13.0.0",
@@ -53,6 +54,13 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "craco-alias": "^3.0.1"
+    "@faker-js/faker": "^8.4.1",
+    "craco-alias": "^3.0.1",
+    "msw": "^2.3.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
